force-app/main/default/objects/Deployment_Demo__c/Deployment_Demo__c.object-meta.xml
<CustomObject>
    <label>Deployment Demo</label>
    <pluralLabel>Deployment Demos</pluralLabel>
    <nameField>
        <label>Deployment Demo Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>