force-app/main/default/objects/Deployment_Demo__c/fields/Deployment_Version__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Version__c</fullName>
    <label>Deployment Version</label>
    <type>Text</type>
    <length>50</length>
</CustomField>