force-app/main/default/objects/Deployment_Demo__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
                <default>true</default>
                <label>DEV</label>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>